2009-12-23  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: [REGRESSION] console's clear command does not work.

        https://bugs.webkit.org/show_bug.cgi?id=32897

        * inspector/console-clear-expected.txt: Added.
        * inspector/console-clear.html: Added.
        * inspector/console-tests.js:
        (dumpConsoleMessages.callback):
        (dumpConsoleMessages):

2009-12-23  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: Console dumps strings in escaped form.

        https://bugs.webkit.org/show_bug.cgi?id=32488

        * inspector/console-format-expected.txt:

2009-12-23  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=32905
        With Pinyin Simplified IM, a wrong character is deleted from google.com suggestion

        * platform/mac/editing/input/selection-change-closes-typing-expected.txt: Added.
        * platform/mac/editing/input/selection-change-closes-typing.html: Added.

2009-12-23  David Levin  <levin@chromium.org>

        REGRESSION (r52494): Assertion failure in Frame::caretBlinkTimerFired() (selection()->isCaret())
        https://bugs.webkit.org/show_bug.cgi?id=32903

        No review but ok'ed by Darin Adler. Rolling out r52494 due to above regression.

        * fast/forms/selection-layout-reentry-strange-case-expected.txt: Removed.
        * fast/forms/selection-layout-reentry-strange-case.html: Removed.
        * platform/mac/accessibility/frame-with-title-expected.txt:

2009-12-23  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Eric Seidel.

        Reverse JS GenerateConstructor logic
        https://bugs.webkit.org/show_bug.cgi?id=32910

        HTMLOptionsCollection correctly exposes its JS constructor now, thus fixing its test in fast/dom/wrapper-classes.html

        * fast/dom/wrapper-classes-expected.txt:
