@@ -1,0 +1,32 @@
+<html>
+<head>
+<script src="inspector-test.js"></script>
+<script src="console-tests.js"></script>
+<script>
+
+function doit()
+{
+    console.log("one");
+    console.log("two");
+    console.log("three");
+
+    output("=== Before clear ==="); 
+    dumpConsoleMessages(true);
+    function callback()
+    {
+        output("=== After clear ==="); 
+        dumpConsoleMessages();
+    }
+    evaluateInWebInspector("WebInspector.console.requestClearMessages()", callback);
+}
+
+</script>
+</head>
+
+<body onload="onload()">
+<p>
+Tests that console is cleared upon requestClearMessages call.
+</p>
+
+</body>
+</html>
